--- a/app/src/main/res/layout/fragment_edit_player_basic_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_basic_.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.myclub.viewModel.PlayerViewModel" />
+            type="com.example.myclub.viewModel.SessionViewModel" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,6 +86,18 @@
                 android:layout_height="wrap_content"></TextView>
             <EditText
                 android:id="@+id/txtEmail"
+                android:text="datchuthanh98@gmail.com"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></EditText>
+            <TextView
+                android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
+                android:text="Address"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></TextView>
+            <EditText
+                android:id="@+id/txtAddress"
                 android:text="datchuthanh98@gmail.com"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
