--- a/app/src/main/res/layout/fragment_edit_player_introduce_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_introduce_.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.myclub.viewModel.PlayerViewModel" />
+            type="com.example.myclub.viewModel.SessionViewModel" />
     </data>
 
 
