--- a/app/src/main/res/layout/fragment_edit_player_player_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_player_.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.myclub.viewModel.PlayerViewModel" />
+            type="com.example.myclub.viewModel.SessionViewModel" />
     </data>
 <LinearLayout
     android:layout_width="match_parent"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"></TextView>
         <EditText
             android:id="@+id/txtWeight"
-            android:text="datchuthanh98@gmail.com"
+            android:text="55"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></EditText>
 
