--- a/app/src/main/res/layout/fragment_edit_main_team.xml
+++ b/app/src/main/res/layout/fragment_edit_main_team.xml
@@ -2,10 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-        <import type="android.view.View" />
+        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
     </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@color/white"
@@ -33,6 +33,7 @@
                     android:text="Edit profile"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
+
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -68,7 +69,6 @@
                             android:textStyle="bold"></TextView>
 
                         <ImageButton
-
                             android:id="@+id/btnEditAvatar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -77,11 +77,10 @@
                     </LinearLayout>
 
                     <ImageView
-                        android:background="@drawable/avatar_team"
-                        android:id="@+id/avatarClub"
+                        android:id="@+id/avatar"
                         android:layout_width="wrap_content"
                         android:layout_height="400dp"
-
+                        android:background="@drawable/avatar_team"
                         android:scaleType="fitXY"></ImageView>
                 </LinearLayout>
 
@@ -114,12 +113,11 @@
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/coverClub"
+                        android:id="@+id/cover"
                         android:layout_width="wrap_content"
                         android:layout_height="400dp"
                         android:background="@drawable/cover_team"
                         android:scaleType="fitXY"></ImageView>
-
                 </LinearLayout>
 
 
@@ -155,7 +153,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:text=" Chelsea Football Club"
+                        android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -163,7 +161,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text=" chelsea@gmail.com"
+                        android:text="@{TeamViewModel.getInstance().teamLiveData.email}"
                         android:textSize="16dp"
                         android:textStyle="bold" />
 
@@ -171,10 +169,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_phone_24_green"
-                        android:text=" 0984060798"
+                        android:text="@{TeamViewModel.getInstance().teamLiveData.phone}"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_baseline_phone_24_green"
+                        android:text="@{TeamViewModel.getInstance().teamLiveData.address}"
                         android:textSize="16dp"
                         android:textStyle="bold" />
                 </LinearLayout>
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -185,84 +192,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Information match"
-                        android:textColor="@color/colorTittle"
-                        android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
-
-                    <ImageButton
-                        android:id="@+id/btnEditPlayer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_baseline_edit_30_black"
-                        android:textStyle="bold"></ImageButton>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:text=" 06/07/1998"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text=" 170 cm"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text=" 59 kg"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:text=" 10"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text=" ST"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_phone_24_green"
-                        android:text=" Right"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Introduce about club"
+                        android:text="Introduce myself"
                         android:textColor="@color/colorTittle"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -279,8 +209,8 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Câu lạc bộ bóng đá Chelsea là một câu lạc bộ bóng đá chuyên nghiệp có trụ sở tại Fulham, London, hiện đang thi đấu tại Giải bóng đá Ngoại hạng Anh"
+                    android:layout_height="200dp"
+                    android:text="@{TeamViewModel.getInstance().teamLiveData.introduce}"
                     android:textStyle="bold" />
             </LinearLayout>
         </ScrollView>
