--- a/app/src/main/res/layout/fragment_edit_team_basic_.xml
+++ b/app/src/main/res/layout/fragment_edit_team_basic_.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
-
+        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +59,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="Chu Thanh Dat"
+                android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
+                android:id="@+id/txtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
             <TextView
@@ -71,18 +71,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="0984060798"
+                android:text="@{TeamViewModel.getInstance().teamLiveData.phone}"
+                android:id="@+id/txtPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
             <TextView
                 android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                android:text=" Email"
+                android:text="Email"
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="datchuthanh98@gmail.com"
+                android:text="@{TeamViewModel.getInstance().teamLiveData.email}"
+                android:id="@+id/txtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></EditText>
+            <TextView
+                android:drawableStart="@drawable/ic_baseline_home_24"
+                android:text="Address"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></TextView>
+            <EditText
+                android:text="@{TeamViewModel.getInstance().teamLiveData.address}"
+                android:id="@+id/txtAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
 
