--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
-
+        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
     </data>
 <LinearLayout android:orientation="vertical"
     android:background="@color/white"
@@ -75,71 +74,49 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cover" />
+          <TextView
+              android:textStyle="bold"
+              android:textSize="25dp"
+              android:gravity="center"
+              android:id="@+id/lblName"
+              android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
+              app:layout_constraintTop_toBottomOf="@id/avatar"
+             app:layout_constraintLeft_toLeftOf="parent"
+              app:layout_constraintRight_toRightOf="parent"
+              android:layout_height="30dp"
+              android:layout_width="0dp"></TextView>
             <LinearLayout
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/inforBasic"
-                app:layout_constraintTop_toBottomOf="@id/avatar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-                <LinearLayout
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity=""
-                    android:layout_weight="1">
-                    <TextView
-                        android:textSize="20dp"
-                        android:textStyle="bold"
-                        android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" Chelsea Footbal Club"/>
-                    <TextView
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" Chelsea@gmail.com"/>
-                    <TextView
-                        android:drawableStart="@drawable/ic_baseline_phone_24_green"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" 0984060798"/>
-                </LinearLayout>
-                <LinearLayout
+                android:layout_marginHorizontal="20dp"
+                app:layout_constraintTop_toBottomOf="@id/lblName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="@{TeamViewModel.getInstance().teamLiveData.level}"
+                    android:textStyle="bold"
+                    android:drawableStart="@drawable/ic_baseline_home_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                   ></TextView>
+                <TextView
+                    android:text="123"
+                    android:textStyle="bold"
+                    android:drawableStart="@drawable/ic_baseline_home_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                   ></TextView>
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    >
-                    <TextView
-                        android:textStyle="bold"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Rating">
-                    </TextView>
-
-                    <TextView
-                        android:gravity="center_horizontal"
-                        android:text="9.8"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/avatar_team"
-                        android:textSize="50dp"
-                         />
-                </LinearLayout>
-
+                    android:drawableStart="@drawable/ic_baseline_home_24"
+                    android:text="123"
+                    android:textStyle="bold"></TextView>
             </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
