--- a/app/src/main/res/layout/fragment_profile_team_basic.xml
+++ b/app/src/main/res/layout/fragment_profile_team_basic.xml
@@ -4,221 +4,64 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
-        <variable
-            name="viewModel"
-            type="com.example.myclub.viewModel.ViewModelTodo" />
+        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    //Inforcontact
     <LinearLayout
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/lblInfor"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listGridData"
+        android:id="@+id/inforContact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        >
+        android:orientation="vertical">
         <TextView
-            android:textColor="@color/colorTittle"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Basic information"
             android:textSize="20dp"
+            android:text="Contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+
+        <TextView
             android:textStyle="bold"
-            >
-        </TextView>
+            android:layout_weight="1"
+            android:id="@+id/phone"
+            android:drawableStart="@drawable/ic_baseline_phone_24_green"
+            android:text="@{TeamViewModel.getInstance().teamLiveData.phone}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+        <TextView
+            android:textStyle="bold"
+            android:id="@+id/email"
+            android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
+            android:text="@{TeamViewModel.getInstance().teamLiveData.email}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+        <TextView
+            android:textStyle="bold"
+            android:id="@+id/address"
+            android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
+            android:text="@{TeamViewModel.getInstance().teamLiveData.address}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+
+
+        <TextView
+            android:textSize="20dp"
+            android:text="Introduce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+        <TextView
+            android:text="@{TeamViewModel.getInstance().teamLiveData.introduce}"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"></TextView>
+
     </LinearLayout>
-
-                <LinearLayout
-                    app:layout_constraintTop_toBottomOf="@id/lblInfor"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/listGridData"
-                    >
-
-                    <LinearLayout
-
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <androidx.cardview.widget.CardView
-                            android:layout_margin="10dp"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            app:cardCornerRadius="10dp"
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <TextView
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="Matched">
-                                </TextView>
-                                <TextView
-                                    android:textStyle="bold"
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="20">
-                                </TextView>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                        <androidx.cardview.widget.CardView
-                            android:layout_margin="10dp"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            app:cardCornerRadius="10dp"
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <TextView
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="Playes">
-                                </TextView>
-                                <TextView
-                                    android:textStyle="bold"
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="17">
-                                </TextView>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                        <androidx.cardview.widget.CardView
-                            android:layout_margin="10dp"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            app:cardCornerRadius="10dp"
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <TextView
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="Different">
-                                </TextView>
-                                <TextView
-                                    android:textStyle="bold"
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="58">
-                                </TextView>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:id="@+id/gridRow1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/weight"
-                            android:layout_margin="10dp"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            app:cardCornerRadius="10dp"
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <TextView
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="Win">
-                                </TextView>
-                                <TextView
-                                    android:textStyle="bold"
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="10">
-                                </TextView>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/height"
-                            android:layout_margin="10dp"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            app:cardCornerRadius="10dp"
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <TextView
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="Drawn">
-                                </TextView>
-                                <TextView
-                                    android:textStyle="bold"
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="4">
-                                </TextView>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/agePlayer"
-                            android:layout_margin="10dp"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            app:cardCornerRadius="10dp"
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <TextView
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="Lose">
-                                </TextView>
-                                <TextView
-                                    android:textStyle="bold"
-                                    android:layout_margin="10dp"
-                                    android:gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:text="3">
-                                </TextView>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-                </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
